<resources>
    <string name="app_name">FinalProject/Library-searcher</string>
    <string name="search_all">전체</string>
    <string name="writer">저자명</string>
    <string name="bookName">서명</string>
    <string name="detailedSearch">상세검색 설정하기</string>
    <string name="publishYear">발행년도</string>
    <string name="isThereOriginal">원문유무</string>
    <string name="search_button">검색</string>
    <string name="dataType">자료종류 : </string>
    <string name="basic"></string>
    <string name="basic2">전체</string>

    <!-- detailed search fragment text -->
    
    <string name="content">목차보기</string>
    <string name="bookmark">북마크등록</string>

    <!-- credit Activity text -->

    <string name="credit_number">2012105095</string>
    <string name="credit_name">진재경</string>

</resources>
